second version of theoretic story behind the project (correction=

--- a/src/app/statistical-tests/statistical-tests.component.css
+++ b/src/app/statistical-tests/statistical-tests.component.css
@@ -34,3 +34,6 @@ h2{
     font-style: oblique;
     text-decoration: underline;
 }
+small{
+    font-size: 0.8rem;
+}
